chore: CONTEXT.md 갱신 — PR #267 머지 완료 (#268)
- 최근 완료에 #267(메타스페이스 조사 종결) 추가
- '최근 3건' 규칙대로 #263·#261·#259를 CONTEXT.archive.md로 이동
- 현재 상태 표 갱신